@startuml hehe

package View {
    class ManagerView {
        - views: unordered_map<std::string, BaseView*> 
        + currentView: BaseView*
        + registerView(view: BaseView*): void
        + setView(key: String): void
        + getView(): BaseView*
        + switchScreen(view: ViewBase): void
    }
    abstract class BaseView {
        +virtual showMenu()  : int
    }
    class DefaultScreenView {
        + showMenu() override : int
    }

    class MediaFileView {
        + showMenu() override : int
        + handleInput() override: int
        + displayMediaFiles(medialist: Vector<mediaFile>, page: int): void
        + displayPagination(currentPage: int, totalPages: int): void
    }

    class PlaybackView {
        + showMenu() override : int
        + handleInput() override: int
        + displayPlaybackInfo(currentMedia: String, duration: int, volume: int): void
    }

    class PlaylistView {
        + showMenu() override : int
        + handleInput() override: int
        + displayPlaylists(playlists: vector<playlist>): void
        + displayPlaylistDetails(playlist : Playlist): void
    }

    class MetadataView {
        + showMenu() override : int
        + handleInput() override: int
        + displayMetadata(metadata: Map<String, String>): void
    }
}

package Model {
    class ManagerModel {
        - mediaLibrary: MediaLibrary
        - playlistLibrary: PlaylistLibrary
        - playingMedia: PlayingMedia
        
        + getMediaLibrary(): MediaLibrary
        + getPlaylistLibrary(): PlaylistLibrary
        + getPlayingMedia(): PlayingMedia
    }

    class PlaylistLibrary {
        - playlists: vector<Playlist>

        + getAllPlaylists(): vector<Playlist>
        + createPlaylist(playlist: Playlist): void
        + deletePlaylist(playlist: Playlist): void
        + getPlaylistByName(name: string): Playlist
    }

    class PlayingMedia {
        - currentMediaFile: MediaFile*
        - currentTime: int
        - isPlaying: bool
        - duration: int

        + getCurrentMediaFile(): MediaFile*
        + setCurrentMediaFile(mediaFile: MediaFile*): void
        + getCurrentTime(): int
        + setCurrentTime(time: int): void
        + getIsPlaying(): bool
        + setIsPlaying(playing: bool): void
    }

    class MediaLibrary {
        - mediaFiles: vector<MediaFile>

        + getAllMediaFiles(): vector<MediaFile>    
        + addMediaFile(file: MediaFile): void
        + removeMediaFile(file: MediaFile): void
        + getMediaFile(): MediaFile
        + scanDirectory(path: string): void
        + scanUSBDevice(): void

        + getTotalPages(pageSize: int): int
        + getMediaFilesForPage(page: int, pageSize: int): vector<MediaFile>
    }

    class MediaFile {
        - name: string
        - path: string
        - type: string
        - metadata: Metadata

        + getName(): string
        + getPath(): string
        + getType(): string
        + getMetadata(): Metadata
        + setMetadata(metadata: Metadata): void
        
    }

    class Metadata {
        - metadata: map<string, string>

        + getMetaData(): map<string, string>
        + setData(data: map<string, string>): void
        + getValue(key: string): string
        + setValue( key: string, value: string): void
    }

    class Playlist {
        - name: string
        - songs: vector<MediaFile>

        + getName(): string
        + getSongs(): vector<MediaFile>
        + addSong(song: MediaFile): void
        + removeSong(song: MediaFile): void
    }
}
package Controller{
    class ManagerController {
        - controller: unordered_map<std::string, BaseController*> 
        
        ' - playlistController: PlaylistController
        ' - mediaFileController: MediaFileController
        ' - playingMediaController: PlayingMediaController
        ' - detailedPlaylistController: DetailedPlaylistController
        ' - metadataController: MetadataController
        - managerView : ManagerView*
        - managerModel: ManagerModel*

        
        
        ' + getPlaylistController(): PlaylistController
        ' + getMediaFileController(): MediaFileController
        ' + getPlayingMediaController(): PlayingMediaController
        ' + getDetailedPlaylistController(): DetailedPlaylistController
        ' + getMetadataController(): MetadataController
    }
    class BaseController{
        + handleAction(action: int): void
    }
    class DefaultScreenController{
        + handleAction(action: int): void
    }

    class PlaylistController {
        + getAllPlaylists(): vector<Playlist>
        + createPlaylist(name: string): void
        + deletePlaylist(name: string): void
        + handleAction(action: int): void
    }

    class MediaFileController {
        + scanDirectory(path: string): vector<MediaFile>
        + scanUSBDevice(): vector<MediaFile>
        + getAllMediaFiles(): vector<MediaFile>
        + getMediaFileDetails(name: string): MediaFile
        + handleAction(action: int): void
    }

    class PlayingMediaController {
        + handleAction(action: int): void
        + playMediaFile(currentMediaFile: MediaFile*): void
        + play(): void
        + pause(): void
        + stop(): void
        + skipToNext(): void
        + skipToPrevious(): void
        + adjustVolume(level: int): void
    }

    class DetailedPlaylistController {
        + handleAction(action: int): void
        + getPlaylistDetails(playlistName: string): Playlist
        + addSongToPlaylist(playlistName: string, song: MediaFile): void
        + removeSongFromPlaylist(playlistName: string, song: MediaFile): void
    }

    class MetadataController {
        + handleAction(action: int): void
        + getMetadatabyID(file: MediaFile): map<string, string>
        + updateMediaFileMetadata(file: MediaFile, metadata: map<string, string>): void
    }
}

ManagerController --> ManagerModel : "Uses"
ManagerController --> ManagerView : "Uses

BaseView --o ManagerView
BaseView <|-- DefaultScreenView
BaseView <|-- MediaFileView
BaseView <|-- PlaybackView
BaseView <|-- PlaylistView
BaseView <|-- MetadataView

ManagerModel --> MediaLibrary
ManagerModel --> PlaylistLibrary
ManagerModel --> PlayingMedia
PlaylistLibrary o-- Playlist
Playlist o-- MediaFile
MediaLibrary o-- MediaFile
MediaFile o-- Metadata
PlayingMedia --> MediaFile

BaseController <|-- DefaultScreenController
BaseController <|-- MediaFileController
BaseController <|-- PlayingMediaController
BaseController <|-- PlaylistController
BaseController <|-- MetadataController
BaseController <|-- DetailedPlaylistController
BaseController --o ManagerController



@enduml
